vlib/v/checker/tests/fn_return_array_sort_err.vv
fn ret_array() []int {
	return [1, 3, 2]
}

fn main() {
	ret_array().sort()
}
